--- a/src/Frame/Dashboard.form
+++ b/src/Frame/Dashboard.form
@@ -74,7 +74,6 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Angel33"/>
               </Properties>
               <AccessibilityProperties>
                 <Property name="AccessibleContext.accessibleDescription" type="java.lang.String" value=""/>
@@ -270,7 +269,7 @@
                       <Image iconType="3" name="/Images/icons8_Search_32px.png"/>
                     </Property>
                     <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                      <Color id="Default Cursor"/>
+                      <Color id="Cursor Por defecto"/>
                     </Property>
                   </Properties>
                   <Events>
@@ -310,7 +309,7 @@
                       <Image iconType="3" name="/Images/reload.png"/>
                     </Property>
                     <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                      <Color id="Default Cursor"/>
+                      <Color id="Cursor Por defecto"/>
                     </Property>
                   </Properties>
                   <Events>
@@ -452,31 +451,10 @@
                   <Color blue="5e" green="5e" red="5e" type="rgb"/>
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="3" rowCount="6">
-                    <Column editable="true" title="Jugador X" type="java.lang.String">
-                      <Data value="     Angel33"/>
-                      <Data value="     Mauricio"/>
-                      <Data value="     Cris"/>
-                      <Data value="     Cris"/>
-                      <Data value="     Angel33"/>
-                      <Data value="     Angel33"/>
-                    </Column>
-                    <Column editable="true" title="Jugador O" type="java.lang.String">
-                      <Data value="     Mauricio"/>
-                      <Data value="     Angel33"/>
-                      <Data value="     Angel33"/>
-                      <Data value="     Angel33"/>
-                      <Data value="     Cris"/>
-                      <Data value="     Mauricio"/>
-                    </Column>
-                    <Column editable="true" title="Resultado" type="java.lang.String">
-                      <Data value="     Victoria"/>
-                      <Data value="     Empate"/>
-                      <Data value="    Empate"/>
-                      <Data value="     Derrota"/>
-                      <Data value="    Victoria"/>
-                      <Data value="    Derrota"/>
-                    </Column>
+                  <Table columnCount="3" rowCount="0">
+                    <Column editable="false" title="Jugador X" type="java.lang.Object"/>
+                    <Column editable="true" title="Jugador O" type="java.lang.Object"/>
+                    <Column editable="false" title="Resultado" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
